--- a/app/templates/services.html
+++ b/app/templates/services.html
@@ -113,13 +113,13 @@
                                     <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         Country
                                     </th>
-                                    <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    <th scope="col" class="px-1 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         Domain
                                     </th>
-                                    <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    <th scope="col" class="px-1 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         Banner
                                     </th>
-                                    <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    <th scope="col" class="px-1 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                         HTTP
                                     </th>
                                     <th scope="col" class="relative px-3 py-2">
@@ -153,15 +153,17 @@
                                         <div class="text-sm text-gray-900">{{ service.country }}</div>
                                         <div class="text-sm text-gray-500">{{ service.asn }}</div>
                                     </td>
-                                    <td class="px-3 py-2 whitespace-nowrap text-sm text-gray-500">
+                                    <td class="px-1 py-2 whitespace-nowrap text-sm text-gray-500">
+                                        {% if service.domain %}
                                         <div class="truncate w-48">{{ service.domain }}</div>
+                                        {% endif %}
                                     </td>
-                                    <td class="px-3 py-2 text-sm text-gray-500">
+                                    <td class="px-1 py-2 text-sm text-gray-500">
                                         {% if service.banner_data %}
                                         <div class="truncate w-48">{{ service.banner_data }}</div>
                                         {% endif %}
                                     </td>
-                                    <td class="px-3 py-2 text-sm text-gray-500">
+                                    <td class="px-1 py-2 text-sm text-gray-500">
                                         {% if service.http_data %}
                                         <div class="truncate w-48">{{ service.http_data }}</div>
                                         {% endif %}
